--- a/k8s-specs/beats/heartbeat/configmap.yml
+++ b/k8s-specs/beats/heartbeat/configmap.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: heartbeat-config
-  namespace: pets
+  namespace: elastic
   labels:
     app: heartbeat
 data:
