--- a/k8s-specs/beats/packetbeat/configmap.yml
+++ b/k8s-specs/beats/packetbeat/configmap.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: packetbeat-config
-  namespace: pets
+  namespace: elastic
   labels:
     app: packetbeat
 data:
