--- a/k8s-specs/kafka-zk/service.yml
+++ b/k8s-specs/kafka-zk/service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: zookeeper
-  namespace: pets
+  namespace: elastic
   labels:
     app: kafka
 spec:
@@ -18,7 +18,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kafka
-  namespace: pets
+  namespace: elastic
   labels:
     app: kafka
 spec:
