--- a/k8s-specs/apm-server/configmap.yml
+++ b/k8s-specs/apm-server/configmap.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: apm-server-config
-  namespace: pets
+  namespace: elastic
   labels:
     app: apm-server
 data:
