--- a/k8s-specs/beats/auditbeat/serviceaccount.yml
+++ b/k8s-specs/beats/auditbeat/serviceaccount.yml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: auditbeat
-  namespace: pets
+  namespace: elastic
   labels:
     app: auditbeat
