--- a/k8s-specs/beats/filebeat/configmap.yml
+++ b/k8s-specs/beats/filebeat/configmap.yml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: filebeat-config
-  namespace: pets
+  namespace: elastic
   labels:
     app: filebeat
 data:
@@ -55,7 +55,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: filebeat-inputs
-  namespace: pets
+  namespace: elastic
   labels:
     app: filebeat
 data:
