--- a/k8s-specs/beats/filebeat/daemonset.yml
+++ b/k8s-specs/beats/filebeat/daemonset.yml
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: filebeat
-  namespace: pets
+  namespace: elastic
   labels:
     app: filebeat
 spec:
