--- a/k8s-specs/beats/metricbeat/configmap.yml
+++ b/k8s-specs/beats/metricbeat/configmap.yml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: metricbeat-deployment-config
-  namespace: pets
+  namespace: elastic
   labels:
     app: metricbeat
 data:
@@ -47,7 +47,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: metricbeat-deployment-modules
-  namespace: pets
+  namespace: elastic
   labels:
     app: metricbeat
 data:
@@ -76,7 +76,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: metricbeat-daemonset-config
-  namespace: pets
+  namespace: elastic
   labels:
     app: metricbeat
 data:
@@ -129,7 +129,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: metricbeat-daemonset-modules
-  namespace: pets
+  namespace: elastic
   labels:
     app: metricbeat
 data:
