--- a/k8s-specs/beats/metricbeat/daemonset.yml
+++ b/k8s-specs/beats/metricbeat/daemonset.yml
@@ -3,7 +3,7 @@ apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: metricbeat
-  namespace: pets
+  namespace: elastic
   labels:
     app: metricbeat
 spec:
