--- a/k8s-specs/beats/packetbeat/daemonset.yml
+++ b/k8s-specs/beats/packetbeat/daemonset.yml
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: packetbeat
-  namespace: pets
+  namespace: elastic
   labels:
     app: packetbeat
 spec:
