--- a/k8s-specs/elasticsearch/configmap.yml
+++ b/k8s-specs/elasticsearch/configmap.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: elasticsearch-config
-  namespace: pets
+  namespace: elastic
   labels:
     app: elasticsearch
 data:
