--- a/k8s-specs/elasticsearch/service.yml
+++ b/k8s-specs/elasticsearch/service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: elasticsearch
-  namespace: pets
+  namespace: elastic
   labels:
     app: elasticsearch
 spec:
