--- a/k8s-specs/elasticsearch/statefulset.yml
+++ b/k8s-specs/elasticsearch/statefulset.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: elasticsearch
-  namespace: pets
+  namespace: elastic
   labels:
     app: elasticsearch
 spec:
