--- a/k8s-specs/kafka-zk/deployment.yml
+++ b/k8s-specs/kafka-zk/deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kafka
-  namespace: pets
+  namespace: elastic
   labels:
     app: kafka
 spec:
