--- a/k8s-specs/kibana/configmap.yml
+++ b/k8s-specs/kibana/configmap.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: kibana-config
-  namespace: pets
+  namespace: elastic
   labels:
     app: kibana-config
 data:
