--- a/k8s-specs/logstash/configmap.yml
+++ b/k8s-specs/logstash/configmap.yml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: logstash-config
-  namespace: pets
+  namespace: elastic
   labels:
     app: logstash-config
 data:
@@ -17,7 +17,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: logstash-config-pipeline
-  namespace: pets
+  namespace: elastic
   labels:
     app: logstash
 data:
