--- a/k8s-specs/logstash/service.yml
+++ b/k8s-specs/logstash/service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: logstash
-  namespace: pets
+  namespace: elastic
   labels:
     app: logstash
 spec:
