--- a/k8s-specs/todo-client/service.yml
+++ b/k8s-specs/todo-client/service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: todo-client
-  namespace: pets
+  namespace: elastic
   labels:
     component: todo-client
 spec:
