--- a/k8s-specs/todo-server/deployment.yml
+++ b/k8s-specs/todo-server/deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: todo-server
-  namespace: pets
+  namespace: elastic
   labels:
     componet: todo-server
 spec:
