--- a/k8s-specs/todo-server/service.yml
+++ b/k8s-specs/todo-server/service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: todo-server
-  namespace: pets
+  namespace: elastic
   labels:
     component: todo-server
 spec:
