--- a/k8s/specs/beats/packetbeat/configmap.yml
+++ b/k8s/specs/beats/packetbeat/configmap.yml
@@ -10,6 +10,10 @@ data:
     
     packetbeat.interfaces.device: any
 
+    packetbeat.flows:
+      timeout: 30s
+      period: 10s
+
     packetbeat.protocols:
     - type: dns
       ports: [53]
