--- a/k8s/specs/helm/helm-rbac.yaml
+++ b/k8s/specs/helm/helm-rbac.yaml
@@ -1,14 +1,18 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: tiller
+  namespace: kube-system
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: heartbeat
-  labels:
-    app: heartbeat
+  name: tiller
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: heartbeat
+  name: cluster-admin
 subjects:
   - kind: ServiceAccount
-    name: heartbeat
-    namespace: elastic
+    name: tiller
+    namespace: kube-system
