update gitignore removed k8s version

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ terraform/.terraform
 terraform/terraform.tfstate
 terraform/terraform.tfstate.backup
 terraform/elastic-aks.tfplan
+terraform/terraform.tf*
