--- a/k8s/specs/beats/filebeat/configmap.yml
+++ b/k8s/specs/beats/filebeat/configmap.yml
@@ -47,7 +47,7 @@ data:
     xpack.monitoring:
       enabled: true
       elasticsearch:
-        hosts: ["http://elasticsearch:9200"]
+        hosts: ["http://elasticsearch-master:9200"]
 
     # filebeat.autodiscover:
     #   providers:
