--- a/k8s/specs/beats/filebeat/job.yml
+++ b/k8s/specs/beats/filebeat/job.yml
@@ -9,13 +9,7 @@ spec:
       initContainers:
       - name: wait-for-elasticsearch
         image: appropriate/curl
-        resources:
-          limits:
-            cpu: 150m
-            memory: 50Mi
-          requests:
-            cpu: 150m
-            memory: 50Mi
+        resources: {}
         env:
           - name: NAMESPACE
             valueFrom:
@@ -24,14 +18,14 @@ spec:
         args:
         - "sh"
         - "-c"
-        - "while [ $(curl -sw %{http_code} http://elasticsearch.${NAMESPACE}.svc.cluster.local:9200/_cluster/health?pretty -o /dev/null) -ne 200 ]; do sleep 15; done"
+        - "while [ $(curl -sw %{http_code} http://elasticsearch-master.${NAMESPACE}.svc.cluster.local:9200/_cluster/health?pretty -o /dev/null) -ne 200 ]; do sleep 15; done"
       containers:
       - name: create-filebeat-template
-        image: docker.elastic.co/beats/filebeat:6.8.0
+        image: docker.elastic.co/beats/filebeat:7.9.1
         command: [ "filebeat", "setup", "--template",
           "-E", "output.kafka.enabled=false",
-          "-E", 'output.elasticsearch.hosts=["elasticsearch.elastic.svc.cluster.local:9200"]' ]
+          "-E", 'output.elasticsearch.hosts=["elasticsearch-master.elastic.svc.cluster.local:9200"]' ]
       - name: force-kibana-new-documents
         image: "appropriate/curl"
-        command: ["curl", "-XDELETE", "elasticsearch.elastic.svc.cluster.local:9200/filebeat-*"]
+        command: ["curl", "-XDELETE", "elasticsearch-master.elastic.svc.cluster.local:9200/filebeat-*"]
       restartPolicy: Never
