--- a/k8s/specs/beats/heartbeat/daemonset.yml
+++ b/k8s/specs/beats/heartbeat/daemonset.yml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: heartbeat
@@ -6,6 +6,9 @@ metadata:
   labels:
     app: heartbeat
 spec:
+  selector:
+    matchLabels:
+      app: heartbeat
   template:
     metadata:
       labels:
@@ -16,13 +19,7 @@ spec:
       initContainers:
         - name: wait-for-elasticsearch
           image: appropriate/curl
-          resources:
-            limits:
-              cpu: 150m
-              memory: 50Mi
-            requests:
-              cpu: 150m
-              memory: 50Mi
+          resources: {}
           env:
             - name: NAMESPACE
               valueFrom:
@@ -34,7 +31,7 @@ spec:
           - "while [ $(curl -sw %{http_code} http://elasticsearch.${NAMESPACE}.svc.cluster.local:9200/_cluster/health?pretty -o /dev/null) -ne 200 ]; do sleep 15; done"
       containers:
       - name: heartbeat
-        image: docker.elastic.co/beats/heartbeat:6.8.0
+        image: docker.elastic.co/beats/heartbeat:7.9.2
         args: [
           "-e"
         ]
@@ -42,9 +39,10 @@ spec:
           runAsUser: 0
         resources:
           limits:
-            memory: 200Mi
-          requests:
             cpu: 100m
+            memory: 300Mi
+          requests:
+            cpu: 50m
             memory: 100Mi
         volumeMounts:
         - name: config
