--- a/k8s/specs/beats/heartbeat/job.yml
+++ b/k8s/specs/beats/heartbeat/job.yml
@@ -9,13 +9,7 @@ spec:
       initContainers:
       - name: wait-for-elasticsearch
         image: appropriate/curl
-        resources:
-          limits:
-            cpu: 150m
-            memory: 50Mi
-          requests:
-            cpu: 150m
-            memory: 50Mi
+        resources: {}
         env:
           - name: NAMESPACE
             valueFrom:
@@ -27,7 +21,7 @@ spec:
         - "while [ $(curl -sw %{http_code} http://elasticsearch.${NAMESPACE}.svc.cluster.local:9200/_cluster/health?pretty -o /dev/null) -ne 200 ]; do sleep 15; done"
       containers:
       - name: create-heartbeat-template
-        image: docker.elastic.co/beats/heartbeat:6.8.0
+        image: docker.elastic.co/beats/heartbeat:7.9.2
         command: [ "heartbeat", "setup", "--template",
           "-E", "output.kafka.enabled=false",
           "-E", 'output.elasticsearch.hosts=["elasticsearch.elastic.svc.cluster.local:9200"]' ]
