--- a/k8s/specs/beats/metricbeat/daemonset.yml
+++ b/k8s/specs/beats/metricbeat/daemonset.yml
@@ -1,5 +1,5 @@
 # Deploy a Metricbeat instance per node for node metrics retrieval
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: metricbeat
@@ -7,6 +7,9 @@ metadata:
   labels:
     app: metricbeat
 spec:
+  selector:
+    matchLabels:
+      app: metricbeat
   template:
     metadata:
       labels:
@@ -19,13 +22,7 @@ spec:
       initContainers:
         - name: wait-for-elasticsearch
           image: appropriate/curl
-          resources:
-            limits:
-              cpu: 150m
-              memory: 50Mi
-            requests:
-              cpu: 150m
-              memory: 50Mi
+          resources: {}
           env:
             - name: NAMESPACE
               valueFrom:
@@ -37,7 +34,7 @@ spec:
           - "while [ $(curl -sw %{http_code} http://elasticsearch.${NAMESPACE}.svc.cluster.local:9200/_cluster/health?pretty -o /dev/null) -ne 200 ]; do sleep 15; done"
       containers:
       - name: metricbeat
-        image: docker.elastic.co/beats/metricbeat:6.8.0
+        image: docker.elastic.co/beats/metricbeat:7.9.2
         args: [
           "-e",
           "-system.hostfs=/hostfs",
@@ -58,7 +55,7 @@ spec:
             memory: 200Mi
             cpu: 100m
           requests:
-            cpu: 100m
+            cpu: 500m
             memory: 100Mi
         volumeMounts:
         - name: config
