--- a/k8s/specs/elasticsearch/headless.yaml
+++ b/k8s/specs/elasticsearch/headless.yaml
@@ -2,6 +2,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: elasticsearch-master-headless
+  namespace: elastic
   labels:
     app: "elasticsearch-master"
   annotations:
