--- a/k8s/specs/elasticsearch/service.yml
+++ b/k8s/specs/elasticsearch/service.yml
@@ -2,6 +2,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: elasticsearch-master
+  namespace: elastic
   labels:
     app: "elasticsearch-master"
 spec:
